--- a/style.css
+++ b/style.css
@@ -1170,7 +1170,6 @@ li {
   color: #ffffffb2;
 }
 
-/* Стили для модального окна */
 .modal {
   display: none;
   position: fixed;
@@ -1179,6 +1178,8 @@ li {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-content {
@@ -1187,10 +1188,14 @@ li {
   padding: 20px;
   border-radius: 16px;
   width: 400px;
-  height: 408px;
   background-color: #fff;
   box-shadow: 0px 4px 10px 0px #00000033;
   position: relative;
+}
+
+.modal__paymentInfo {
+  display: flex;
+  gap: 8px;
 }
 
 .close {
@@ -1426,6 +1431,108 @@ li {
   display: none;
 }
 
+.modal__main {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+
+.modalAdress {
+  width: 500px;
+  background-color: #ffffff;
+  position: relative;
+  border-radius: 16px;
+  padding: 16px 22px 24px 22px;
+}
+
+.modalAdress__title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 28px;
+}
+
+.closeAdress {
+  position: absolute;
+  top: 3%;
+  left: 90%;
+  color: #9797af;
+  font-size: 28px;
+  font-weight: 600;
+}
+
+.modalAdress__wrapper {
+  margin-top: 13px;
+  display: flex;
+  gap: 8px;
+}
+
+.btn__point {
+  background-color: transparent;
+  border-radius: 20px;
+  border: 2px solid #CB11AB;
+  width: 224px;
+  height: 36px;
+  font-size: 13px;
+  line-height: 16px;
+  font-weight: 600;
+}
+
+.btn__courier {
+  background-color: transparent;
+  border-radius: 20px;
+  border: 2px solid #CB11AB26;
+  width: 224px;
+  height: 36px;
+  font-size: 13px;
+  line-height: 16px;
+  font-weight: 600;
+}
+
+.activeInCourier {
+  display: none;
+}
+
+.modalAdress__myadress {
+  margin-top: 24px;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+}
+
+.modalAdress__radio {
+  display: flex;
+  gap: 8px;
+  font-size: 16px;
+  line-height: 24px;
+  align-items: baseline;
+  margin-top: 8px;
+}
+
+.pointerWrapper {
+  display: flex;
+  gap: 8px;
+}
+
+.modalAdress__btn {
+  height: 44px;
+  padding: 0 48px 5px 48px;
+  background-color: #cb11ab;
+  box-shadow: 0px 2px 6px 0px #00000014;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 700;
+  color: #fff;
+  border-radius: 8px;
+  margin-top: 50px;
+}
+
 @media (max-width: 1024px) {
   .header__input {
     width: 594px;
@@ -1617,6 +1724,8 @@ li {
 
   .cartDelivery__agree {
     align-items: end;
+    justify-content: center;
+    padding: 0;
   }
 
   .cartDelivery__agreeText p {
