--- a/style.css
+++ b/style.css
@@ -319,8 +319,11 @@ li {
 }
 
 .cart__price {
+  position: absolute;
+  top: 40px;
+  right: 40px;
   border: none;
-  height: 572px;
+  height: max-content;
   padding: 16px 24px 24px 24px;
   border-radius: 16px;
   box-shadow: 0px 2px 10px 0px #00000026;
@@ -516,6 +519,7 @@ li {
 
 .cart__info {
   padding-top: 10px;
+  width: auto;
   width: 891px;
 }
 
@@ -529,6 +533,13 @@ li {
   margin-top: 27px;
   display: flex;
   gap: 11px;
+}
+
+.accordion--close {
+  display: none;
+  font-weight: 600;
+  line-height: 24px;
+  font-size: 16px;
 }
 
 .checkbox__wrapper input[type="checkbox"] {
@@ -883,7 +894,7 @@ li {
 .cartDelivery {
   background-color: #fff;
   width: 100%;
-  height: 362px;
+  height: max-content;
   border-radius: 16px;
   padding: 16px 0 24px 0;
   margin-top: 18px;
@@ -915,7 +926,7 @@ li {
   margin-top: 16px;
   display: flex;
   gap: 32px;
-  height: 228px;
+  height: max-content;
 }
 
 .cartDelivery__infoFixed {
@@ -939,10 +950,17 @@ li {
   margin-bottom: 48px;
 }
 
-.cartDelivery__infoChanged {
+.infoChanged__address {
   display: flex;
-  flex-direction: column;
-  gap: 16px;
+  gap: 32px;
+}
+
+.infoChanged__address p1 {
+  width: 177px;
+}
+
+.infoChanged__addressText {
+  width: 390px;
 }
 
 .infoChanged__addressTime {
@@ -965,12 +983,28 @@ li {
 }
 
 .infoChanged__price {
-  margin-top: 3px;
+  margin-top: 16px;
+  display: flex;
+  gap: 32px;
   font-size: 16px;
   line-height: 24px;
 }
 
+.infoChanged__price p1 {
+  width: 177px;
+}
+
 .infoChanged__images {
+  margin-top: 16px;
+  display: flex;
+  gap: 32px;
+}
+
+.infoChanged__images p1 {
+  width: 177px;
+}
+
+.infoChanged__imagesWrapper {
   display: flex;
   gap: 8px;
 }
@@ -981,6 +1015,7 @@ li {
   gap: 8px;
   padding: 0 24px;
   position: relative;
+  align-items: center;
 }
 
 .cartDelivery__agreeText p {
@@ -1088,14 +1123,18 @@ li {
   margin-top: 16px;
 }
 
-.personalName,
-.personalLastname {
+.formInput--error p,
+.formInput--error input {
+  color: #f55123;
+  border-color: #f55123 !important;
+}
+
+.formInput {
   width: 100%;
   height: 64px;
 }
 
-.personalName input,
-.personalLastname input {
+.formInput input {
   border-top: none;
   border-left: none;
   border-right: none;
@@ -1105,8 +1144,7 @@ li {
   margin-top: 18px;
 }
 
-.personalName input::placeholder,
-.personalLastname input::placeholder {
+.formInput input::placeholder {
   font-size: 16px;
   line-height: 24px;
   color: #9797af;
@@ -1180,11 +1218,11 @@ li {
   background-color: rgba(0, 0, 0, 0.7);
   justify-content: center;
   align-items: center;
+  z-index: 100;
 }
 
 .modal-content {
   background-color: #fefefe;
-  margin: 11% auto;
   padding: 20px;
   border-radius: 16px;
   width: 400px;
@@ -1476,7 +1514,7 @@ li {
 .btn__point {
   background-color: transparent;
   border-radius: 20px;
-  border: 2px solid #CB11AB;
+  border: 2px solid #cb11ab;
   width: 224px;
   height: 36px;
   font-size: 13px;
@@ -1487,7 +1525,7 @@ li {
 .btn__courier {
   background-color: transparent;
   border-radius: 20px;
-  border: 2px solid #CB11AB26;
+  border: 2px solid #cb11ab26;
   width: 224px;
   height: 36px;
   font-size: 13px;
@@ -1533,6 +1571,10 @@ li {
   margin-top: 50px;
 }
 
+.cart__more {
+  width: 891px;
+}
+
 @media (max-width: 1024px) {
   .header__input {
     width: 594px;
@@ -1561,6 +1603,41 @@ li {
 }
 
 @media (max-width: 320px) {
+  .checkbox__wrapper:not(#chooseAll__wrapper):not(#instantPay__wrapper) {
+    position: absolute;
+    left: 6px;
+    top: 20px;
+  }
+
+  .orderItem__availability {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+
+  .orderItem {
+    margin-top: 12px;
+    width: 100%;
+  }
+
+  .orderItem__quantity {
+    margin: 0;
+  }
+
+  .orderItem__buttonsWrapper {
+    margin: 0;
+  }
+
+  .orderItem__price {
+    position: absolute;
+    top: 5px;
+    left: 90px;
+    flex-direction: row;
+    gap: 5px;
+    align-items: center;
+  }
+
   .header {
     height: 80px;
   }
@@ -1586,10 +1663,6 @@ li {
   .header__titleBurgerWrapper {
     align-items: start;
     gap: 5px;
-  }
-
-  .cart__infoChoose {
-    margin-left: 16px;
   }
 
   .line {
@@ -1631,7 +1704,8 @@ li {
   }
 
   .cart__info {
-    padding-top: 0;
+    padding: 24px 16px 0 16px;
+    width: 100%;
   }
 
   .cart__infoTitle {
@@ -1640,16 +1714,19 @@ li {
     font-weight: 700;
   }
 
-  .choose__wrapperIcon {
-    margin-left: 128px;
+  .accordion--close {
+    font-size: 13px;
+    line-height: 16px;
+  }
+
+  .cart__infoChoose {
+    display: flex;
+    justify-content: space-between;
+    width: 288px;
   }
 
   .cart__infoLine {
     width: 288px;
-  }
-
-  .cart__cartItems {
-    display: none;
   }
 
   .cartProducts__mobile {
@@ -1668,13 +1745,10 @@ li {
   .overview__title {
     font-size: 14px;
     line-height: 20px;
+    margin-top: 24px;
   }
 
   .overview__wrapperSize {
-    display: none;
-  }
-
-  .cartItem__overview {
     display: none;
   }
 
@@ -1687,16 +1761,16 @@ li {
   .cartItem {
     display: block;
     padding-bottom: 16px;
+    position: relative;
   }
 
-  .orderItem__buttonsWrapper {
-    margin-left: 220px;
+  .cart__cartItems {
+    max-height: max-content;
   }
 
   .cart__cartItemsAbsence {
     max-height: fit-content;
     gap: 0;
-    margin-left: 16px;
   }
 
   .cartAbsence__wrapper {
@@ -1712,24 +1786,6 @@ li {
 
   .cart__infoLine {
     margin-left: 16px;
-  }
-
-  .cartDelivery {
-    display: none;
-  }
-
-  .cartDelivery__mobile {
-    display: block;
-  }
-
-  .cartDelivery__agree {
-    align-items: end;
-    justify-content: center;
-    padding: 0;
-  }
-
-  .cartDelivery__agreeText p {
-    width: 230px;
   }
 
   .cartPayment {
@@ -1774,13 +1830,14 @@ li {
   }
 
   .cart__price {
-    margin-left: 16px;
+    position: relative;
     background-color: transparent;
     box-shadow: none;
     border-radius: 0;
-    padding: 0;
     height: fit-content;
     padding-bottom: 32px;
+    top: 0;
+    right: 0;
   }
 
   .delivery__time {
@@ -1835,4 +1892,90 @@ li {
   .button__order {
     width: 288px;
   }
+
+  .cartDelivery {
+    height: max-content;
+  }
+
+  .infoChanged__address {
+    display: block;
+  }
+
+  .infoChanged__address p1 {
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 600;
+  }
+
+  .infoChanged__addressText {
+    font-size: 16px;
+    line-height: 24px;
+    width: 288px;
+  }
+
+  .infoChanged__price {
+    display: block;
+  }
+
+  .infoChanged__price p1 {
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 600;
+  }
+
+  .infoChanged__images {
+    display: block;
+  }
+
+  .infoChanged__images {
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 600;
+  }
+
+  .infoChanged__imagesWrapper {
+    margin-top: 12px;
+  }
+
+  .cartDelivery__infoWrapper {
+    gap: 0;
+  }
+
+  .infoChanged__image {
+    margin-top: 12px;
+  }
+
+  .cartDelivery__agreeText {
+    width: 242px;
+  }
+
+  .cartDelivery__titleText {
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: 700;
+  }
+
+  .cartDelivery__title {
+    width: 288px;
+    padding: 0 0 0 24px;
+  }
+
+  .modal__main {
+    top: 0;
+    left: 0;
+    justify-content: flex-start;
+  }
+
+  .modalAdress {
+    width: 320px;
+  }
+
+  .modal {
+    justify-content: flex-start;
+  }
+
+  .modal-content {
+    width: 320px;
+  }
+
 }
